# molecular-agent

./: .env.example  .gitignore  README.md  compose.override.yml  compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/api/: main.py
backend/app/api/routes/: agent.py  evals.py  health.py  molecules.py  rag.py
backend/app/core/: config.py  db.py
backend/app/evals/: __init__.py  evaluators.py  runner.py  task.py
backend/app/evals/datasets/: tool-selection.json
backend/app/evals/reports/: .gitignore  .gitkeep
backend/app/services/: __init__.py  agent.py  rag.py
backend/app/tools/: __init__.py  base.py  compound_search.py  drug_likeness.py  literature_search.py  molecule_generator.py  property_predictor.py  similarity_search.py  smiles_validator.py
backend/scripts/: ingest_all.py  ingest_chembl.py  ingest_pubmed.py  run-evals.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_molecules.py
backend/tests/evals/: test_evaluators.py
backend/tests/tools/: test_drug_likeness.py  test_molecule_generator.py  test_property_predictor.py  test_similarity_search.py  test_smiles_validator.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/Chat/: ChatWindow.tsx  MessageList.tsx  ToolCallDisplay.tsx
scripts/: run-tests.sh  setup-dev.sh
